@@ -189,6 +189,13 @@ hides
 the widget, or makes it visible
 .Pq Ic 1 .
 .Pp
+.Qq Fa name Ns Ic :set_size_request Bq Fa width height
+sets the widget's minimum size to
+.Fa width
+x
+.Fa height .
+Default is the widget's natural size.
+.Pp
 .Qo
 .Fa name Ns Ic :style
 .Bo Fa prop Ic : Ns Fa val Ns Bo Ic ; Fa prop Ic : Ns Fa val ... Bc Bc
